--- a/index.html
+++ b/index.html
@@ -142,7 +142,34 @@
        <div class="action"> <a href="#" class="btn btn-fill">See full Giudelines</a></div>
     </div>
 </section>
-    
+    <section class="property" id="listed">
+        <div class="container">
+            <div class="top">
+                <div class="heading">
+                    <h3>Feature Property</h3>
+                    <p>Every thing you need to now when you are looking</p>
+                </div>
+                <a href="#" class="btn btn-line">
+                    view All Property <i class="ri-arrow-right-line"></i>
+                </a>
+            </div>
+            <div class="list">
+                <a href="#" class="card">
+                    <div class="placeholder"></div>
+
+                    <div class="bottom">
+                        <h4>$3500</h4>
+                        <p>8502 Preston Rd Inglewood , Maine 98280</p>
+                        <div class="features">
+                            <span><i class="ri-hotel-bed-line"></i> 5 Beds</span>
+                            <span><i class="ri-home-4-line"></i> 2 Baths</span>
+                            <span><i class="ri-ruler-2-line"></i> 2000 sqft </span>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
     <!-- <script>
     const hamb =document.querySelector(".hamb");
