--- a/index.html
+++ b/index.html
@@ -150,10 +150,38 @@
                     <p>Every thing you need to now when you are looking</p>
                 </div>
                 <a href="#" class="btn btn-line">
-                    view All Property <i class="ri-arrow-right-line"></i>
+                    view All Properties <i class="ri-arrow-right-line"></i>
                 </a>
             </div>
-            <div class="list">
+            <div class="list flex ai-c">
+                <a href="#" class="card">
+                    <div class="placeholder"></div>
+
+                    <div class="bottom">
+                        <h4>$3500</h4>
+                        <p>8502 Preston Rd Inglewood , Maine 98280</p>
+                        <div class="features">
+                            <span><i class="ri-hotel-bed-line"></i> 5 Beds</span>
+                            <span><i class="ri-home-4-line"></i> 2 Baths</span>
+                            <span><i class="ri-ruler-2-line"></i> 2000 sqft </span>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="#" class="card">
+                    <div class="placeholder"></div>
+
+                    <div class="bottom">
+                        <h4>$3500</h4>
+                        <p>8502 Preston Rd Inglewood , Maine 98280</p>
+                        <div class="features">
+                            <span><i class="ri-hotel-bed-line"></i> 5 Beds</span>
+                            <span><i class="ri-home-4-line"></i> 2 Baths</span>
+                            <span><i class="ri-ruler-2-line"></i> 2000 sqft </span>
+                        </div>
+                    </div>
+                </a>
+
                 <a href="#" class="card">
                     <div class="placeholder"></div>
 
