--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section class="hero" id="hero">
         <div class="container">
             <div class="desc">
-                <h3 class="tag">Wellcome To Basnic Agency</h3>
+                <h3 class="tag">Wellcome To Besnik Manihar Agency</h3>
                 <h2 class="title">Discover a Place you ll love to Live</h2>
                 <p class="text">The bast Real eastet deals first before thay hit the mass market! hot foreclousure deep with one simple touch</p>
                 <div class="cta">
@@ -198,6 +198,102 @@
             </div>
         </div>
     </section>
+
+    <section class="progress" id="progress">
+        <div class="container">
+            <div class="details flex ai-c jc-sb">
+                <div class="left">
+                    <img src="progress.png" alt="progress image">
+                </div>
+                <div class="right">
+                    <h3 class="title">You ve found a neighborhood you love.</h3>
+                
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Maiores voluptas repudiandae quaerat dolor officia, consectetur ad
+                      esse non deserunt at illo a dolorum voluptatum magnam temporibus, 
+                      nobis vero architecto laudantium.
+                </p>
+            </div>
+        </div>
+        <div class="done">
+            <div class="card">
+                <span>120</span>
+                <p>Homes for sale</p>
+            </div>
+            <div class="card">
+                <span>65+</span>
+                <p>Homes Recently soled</p>
+            </div>
+            <div class="card">
+                <span>15%</span>
+                <p>Price reducd</p>
+            </div>
+        </div>
+    </div>
+    </section>
+
+    <Section class="newsletter" id="connect">
+        <div class="container">
+            <div class="text-box">
+                <h3>Feature Properties</h3>
+                <p>Everything you need to know you're looking</p>
+                <a href="#" class="btn btn-fill">Get Started now</a>
+            </div>
+
+            <img src="home.svg" alt="" class="placeholder">
+        </div>
+    </Section>
+    <footer>
+        <div class="container">
+            <div class="top">
+                <div class="box">
+                    <h5><a href="#">Product</a></h5>
+
+                    <div class="links">
+                        <span><a href="#">Listing</a></span>
+                        <span><a href="#">Property</a></span>
+                        <span><a href="#">Agents</a></span>
+                        <span><a href="#">Blogs</a></span>
+                    </div>
+                </div>
+                
+                <div class="box">
+                    <h5><a href="#">Resources</a></h5>
+
+                    <div class="links">
+                        <span><a href="#">Our Home</a></span>
+                        <span><a href="#">Member Series</a></span>
+                        <span><a href="#">Video</a></span>
+                        <span><a href="#">Free Trial</a></span>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <h5><a href="#">Company</a></h5>
+
+                    <div class="links">
+                        <span><a href="#">Pertnership</a></span>
+                        <span><a href="#">Term of use</a></span>
+                        <span><a href="#">Privecy</a></span>
+                        <span><a href="#">Sitamp</a></span>
+                    </div>
+                </div>
+                <div class="box connect">
+                    <h5><a href="#">Get in touch</a></h5>
+                    <p>You'll find you next home, in any style you prefer.</p>
+                    <div class="Social">
+                        <a href="https://www.instagram.com/j_d_x_atul_005/"><i class="ri-instagram-fill"></i></a>
+                        <a href=" https://twitter.com/AtulManihar?t=xwvWxquzVqTIB9OekZlRmw&s=09"><i class="ri-twitter-x-line"></i></a>
+                        <a href="https://www.facebook.com/atulmanihar.atulmanihar.1"><i class="ri-facebook-fill"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                <a href="#"><img src="Logo.png" alt="page logo"></a>
+                <p>Copyright 2024 Atul Singh all rights reserved</p>
+            </div>
+        </div>
+    </footer>
     <script src="script.js"></script>
     <!-- <script>
     const hamb =document.querySelector(".hamb");
